MIDDLE OF DEV ! ClsSgsUpdater code complete but NOT COMPILABLE GLOBALLY SO NO TESTED. TODO: SongStructure, Song, then all listeners